--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,99 +1,340 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-/* universal */
+
+//自サイト用の専用配色
+$base-color1: #a3d749;
+$base-color2: #90ca3d;
+$base-color3: #fddb64;
+
+
+/*================================================
+ *  一般・共通設定
+ ================================================*/
 
 body {
-    padding-top: 60px;
-  }
-  
-  section {
-    overflow: auto;
-  }
-  
-  textarea {
-    resize: vertical;
-  }
-  
-  .center {
-    text-align: center;
-  h1 {
-    margin-bottom: 10px;
-    }
-  }
-  /* typography */
+  font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック',YuGothic,'Yu Gothic','メイリオ', Meiryo,'ＭＳ Ｐゴシック','MS PGothic',sans-serif;
+  padding: 250px 0px 0px 0px;
+  color: white;
+  overflow-x: hidden;   //横スクロール禁止
+  background: $base-color1 image-url("bg.png") fixed  0 0;
+}
+
+#contents {
+  width:100%;
+  margin:0 auto;
+}
+
+/* typography */
 
 h1, h2, h3, h4, h5, h6 {
-    line-height: 1;
+  color: black;                 // 字色
+  text-align: center;             // 中央寄せ
+  line-height: 1.5;               // 行間
+  margin-bottom: 30px;            // マージン
+}
+
+h1 {
+  font-size: calc(250% + 0.5vw);  // 文字サイズ（レスポンシブ）
+  font-weight: bold;               // 字の太さ
+  letter-spacing: 1.5px;          // 字間隔
+}
+
+h2 {
+  font-size: calc(150% + 0.5vw);   // 文字サイズ（レスポンシブ）
+  font-weight: bold;               // 字の太さ
+  letter-spacing: 1px;             // 字間隔
+}
+
+p {
+  color: black;                  // 字色
+  font-size: calc(85% + 0.5vw);    // 文字サイズ（レスポンシブ）
+  line-height: 2.0;                // 行間
+}
+
+
+/*================================================
+ *  スティッキーヘッダー
+ ================================================*/
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  transition: .5s ease-in-out;   //ゆっくり始まりゆっくり終わる
+}
+
+/* スクロール時にヘッダーの縦サイズを縮める */
+.header-animation {
+  height: 8%;
+}
+
+/* ロゴ */
+.logo {
+  position: absolute;     // 絶対位置
+  bottom: -15%;           // 下に固定
+  left: 10%;              // 左に固定
+  z-index: 999;           // 上に重なる
+  width: 30%;             // 列幅の割合を固定
+  height: 90%;            // 高さの割合を固定
+  transition: .5s ease-in-out;
+  img {
+    max-width: 100%;      //領域の幅の最大値を指定
+    max-height: 100%;     //領域の高さの最大値を指定
+    width: auto;
+    height: auto;
   }
-  $light-gray: #777;
-  h1 {
-    font-size: 3em;
-    letter-spacing: -2px;
-    margin-bottom: 30px;
-    text-align: center;
+}
+
+/* スクロール時にロゴを左へ移動 */
+.logo-animation {
+  bottom: -12%;
+  left: 7%;
+}
+
+/* ヘッダーナビゲーション */
+#nav-header {
+  nav {
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+    z-index: 2000;             // 上に重なる
+    font-size: calc(80% + 0.5vw);  //小さいビューポートの文字のサイズを調整
+    width: 93vw;
+    height: 36px;
+    transition: .5s ease-in-out;
+
+    ul {
+      list-style: none;
+      padding: .2em 2em;
+      float: right;
+      li {
+        display: inline-block;  //表示のされ方　blockとinlineの中間
+        margin: 0;
+        padding: .2em .7em;
+      }
+    }
+
+    a {
+      width: 100%;
+      height: 100%;
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+      letter-spacing: 1px;
+      transition: .25s ease-in-out;
+      &:hover {
+        color: $base-color3;
+      }
+    }
+
   }
-  
-  h2 {
-    font-size: 1.2em;
-    letter-spacing: -1px;
-    margin-bottom: 30px;
-    text-align: center;
-    font-weight: normal;
-    color: $light-gray;
-  }
-  
+}
+
+/* ヘッダー背景 */
+.nav-bg {
+  content: '';
+  position: absolute;
+  display: block;
+  top: -120%;
+  width: 100%;
+  height: 120%;
+  z-index: -1;
+  background: $base-color2;
+  transition: .4s ease-in-out;
+}
+
+/* ヘッダー背景の非表示 */
+.bg-hidden {
+  top: -120%;
+  opacity: 0;
+}
+
+/* ヘッダー背景の表示 */
+.bg-visible {
+  top: 0;
+  opacity: 1;
+}
+
+/*================================================
+ *  汎用クラス
+ ================================================*/
+
+ /* 写真中央寄せ */
+ .imgC {
+  clear:both;
+  overflow:hidden;
+  margin-bottom:50px;
+  text-align:center;
+img {
+  border-radius:5px;
+  margin-bottom:0.5em;
+}
+}
+
+/* 写真左寄せ */
+.imgL {
+  clear:both;
+overflow:hidden;
+margin-bottom:50px;
+img {
+  float:left;
+  margin:0 2em 2em 0;
+  border-radius:5px;
+}
+}
+
+/* 写真右寄せ */
+.imgR {
+  clear:both;
+overflow:hidden;
+margin-bottom:50px;
+img {
+  float:right;
+  margin:0 0 2em 2em;
+  border-radius:5px;
+}
+}
+
+/* 通常の領域 */
+.normal-area {
+width:100%;
+padding: 10px;
+}
+
+/* 背景画像を表示させない領域 */
+.non-background-area {
+width:100%;
+padding: 10px;
+background: $base-color2
+}
+
+/* 通常のブロック */
+.normal-block {
+margin: 50px;
+padding: 20px;
+}
+
+/* 背景が白いブロック */
+.white-block {
+margin: 50px;
+  padding: 50px;
+  border-radius: 10px;
+background: rgb(255, 255, 255);
+}
+
+/*================================================
+ *  フッター
+ ================================================*/
+
+ footer {
+  clear:both;
+  width:100%;
+  padding: 20px 10px 10px 10px;
+  text-align:center;
+  background: $base-color2;
   p {
-    font-size: 1.1em;
-    line-height: 1.7em;
-  }
-  
-  /* header */
-
-#logo {
-    float: left;
-    margin-right: 10px;
-    font-size: 1.7em;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-    padding-top: 9px;
+    color: white;
+    font-size: calc(50% + 0.5vw);
     font-weight: bold;
-
-  &:hover {
-    color: #fff;
-    text-decoration: none;
   }
-  }
-
-  /* footer */
-
-footer {
-    margin-top: 45px;
-    padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: $light-gray;
-  }
-  
-  footer a {
-    color: #555;
-  }
-  
-  footer a:hover {
-    color: #222;
-  }
-  
-  footer small {
-    float: left;
-  }
-  
-  footer ul {
-    float: right;
+  ul {
     list-style: none;
+    margin: 0px;
+    padding: .2em 2em;
+    li {
+      display: inline-block;
+      padding: .2em .7em;
+      img {
+        width: 32px;
+        height: 32px;
+      }
+    }
   }
-  
-  footer ul li {
-    float: left;
-    margin-left: 15px;
+}
+
+/*================================================
+ *  スマートフォン向けスタイル
+ ================================================*/
+ @media screen and (max-width:896px) {
+
+  html {
+    overflow-x : hidden;
+    -webkit-overflow-scrolling: touch;
   }
-  
+
+  body {
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .imgC {
+    margin-bottom:30px;
+    img {
+      max-width:100%;
+    }
+  }
+
+  .imgL {
+    margin-bottom:30px;
+    img {
+      display:block;
+      float:none;
+      max-width:100%;
+      margin:0 auto 1em auto;
+    }
+  }
+
+  .imgR {
+    margin-bottom:30px;
+    img {
+      display:block;
+      float:none;
+      max-width:100%;
+      margin:0 auto 1em auto;
+    }
+  }
+
+  .header-animation {
+    height: 75px;
+  }
+
+  .logo {
+    bottom: 15%;
+    left: 13%;
+    width: 100%;
+    height: 65%;
+  }
+
+  .logo-animation {
+    left: 3%;
+  }
+
+  #nav-header {
+    nav {
+      bottom: 120%;   //ヘッダーナビゲーションを隠す
+    }
+  }
+
+  .nav-bg {
+    content: '';
+    top: -100%;
+    height: 100%;
+  }
+
+  .bg-hidden {
+    top: -100%;
+    opacity: 0;
+  }
+
+  .bg-visible {
+    top: 0;
+    opacity: 1;
+  }
+
+  footer {
+    padding: 10px 0px 0px 0px;
+    border: 1px solid blue;
+  }
+}
