--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,53 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+
+<header style="z-index:1000;">
+
+  <!-- ヘッダー背景 -->
+  <div class="nav-bg"></div>
+
+  <!-- ロゴ -->
+  <div class="logo" style="z-index:9999;">
+    <%= link_to image_tag("logo.png", alt: "Logo"), root_path %>
+  </div>
+
+  <!-- ヘッダーナビゲーション -->
+  <div id="nav-header">
     <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path%></li>
-        <li><%= link_to "Help", help_path%></li>
-        <li><%= link_to "Log in", '#' %></li>
+      <ul>
+        <li><%= link_to "ホーム", root_path%></li>
+        <li><%= link_to "ヘルプ", help_path%></li>
+        <li><%= link_to "国語", help_path%></li>
+        <li><%= link_to "社会", help_path %></li>
+        <li><%= link_to "数学", help_path %></li>
+        <li><%= link_to "理科", help_path %></li>
+        <li><%= link_to "英語", help_path %></li>
       </ul>
     </nav>
   </div>
+
+ <!-- ハンバーガーメニューアイコン -->
+  <div id="nav-toggle">
+    <div>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+
+  <!-- ハンバーガーメニューウインドウ -->
+  <div id="nav-window">
+    <nav>
+      <ul>
+        <li><%= link_to "ホーム", root_path%></li>
+        <li><%= link_to "ヘルプ", help_path%></li>
+        <li><%= link_to "国語", japanese_path%></li>
+        <li><%= link_to "社会", socialstudies_path %></li>
+        <li><%= link_to "数学", math_path %></li>
+        <li><%= link_to "理科", science_path %></li>
+        <li><%= link_to "英語", english_path %></li>
+      </ul>
+    </nav>
+  </div>
+
+</header>
 </header>
