--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,66 @@
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+<% provide(:title, "Home") %>
 
-  <h2>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
+<div id="contents">
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <!-- 国語のコンテンツ -->
+  <div class="down-appear-trigger">
+  <div class="normal-area down-appear">
+    <div class="normal-block">
+      <div class="imgR">
+        <%= image_tag "japanese.png", alt: "Harry" %>
+        <h1>国語<br>読み解くチカラ</h1>
+        <p>国語の授業、よくあることとは？？</p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- 社会のコンテンツ -->
+  <div class="up-appear-trigger">
+  <div class="non-background-area up-appear">
+    <div class="white-block block2">
+      <div class="imgR">
+        <%= image_tag "socialstudies.png", alt: "Harry" %>
+        <h1>ピコン！<br>とひらめく力！！</h1>
+        <p>楽しくプログラミングする、まったり、ゆっくりな小動物、ハリー教授です！！</p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- 数学のコンテンツ -->
+  <div class="left-slide-trigger">
+  <div class="normal-area left-slide">
+    <div class="normal-block">
+      <div class="imgL">
+        <%= image_tag "math.png", alt: "Harry" %>
+        <h1>ピコン！<br>とひらめく力！！</h1>
+        <p>楽しくプログラミングする、まったり、ゆっくりな小動物、ハリー教授です！！/p>
+      </div>  
+    </div>
+  </div>
+
+  <!-- 理科のコンテンツ -->
+  <div class="right-slide-trigger">
+  <div class="normal-area right-slide">
+    <div class="normal-block">
+      <div class="imgL">
+        <%= image_tag "science.png", alt: "Harry" %>
+        <h1>ピコン！<br>とひらめく力！！</h1>
+        <p>楽しくプログラミングする、まったり、ゆっくりな小動物、ハリー教授です！！</p>
+      </div>  
+    </div>
+  </div>
+
+  <!-- 英語のコンテンツ -->
+  <div class="right-slide-trigger">
+  <div class="normal-area right-slide">
+    <div class="normal-block">
+      <div class="imgL">
+        <%= image_tag "english.png", alt: "Harry" %>
+        <h1>ピコン！<br>とひらめく力！！</h1>
+        <p>楽しくプログラミングする、まったり、ゆっくりな小動物、ハリー教授です！！</p>
+      </div>  
+    </div>
+  </div>
 </div>
-
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
