--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
   <div class="normal-area down-appear">
     <div class="normal-block">
       <div class="imgR">
-        <%= image_tag "japanese.png", alt: "Harry" %>
+        <%= image_tag "japanese.png", :size =>'512x512', alt: "Harry" %>
         <h1>国語<br>読み解くチカラ</h1>
         <p>国語の授業、よくあることとは？？</p>
       </div>
