--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <%= render 'layouts/header' %>
     <div>
       <%= yield %>
+          <%= debug(params) if Rails.env.development? %>
     </div>
     <%= render 'layouts/footer' %>
   </body>
