--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,15 @@
         <li><%= link_to "数学", help_path %></li>
         <li><%= link_to "理科", help_path %></li>
         <li><%= link_to "英語", help_path %></li>
+             <% if logged_in? %>
+        <li><%= link_to "Users", '#' %></li>
+        <li><%= link_to "Profile", current_user %></li>
+        <li><%= link_to "Settings", '#' %></li>
+        <%= link_to "Log out", logout_path, method: :delete %>
+          <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+        
       </ul>
     </nav>
   </div>
