--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -63,4 +63,32 @@
       </div>  
     </div>
   </div>
+
+
+ 
+  <!-- 領域全体 -->
+  <section class="non-background-area grid-block">
+
+    <!-- グリッド表示 -->
+    <div class="container grid-container">
+
+      <!-- 記事1 -->
+      <div class="grid-content grid-block-1">
+        <!-- イメージ -->
+        <div class="grid-content-image hover:shadow-raised hover:translateY-2px transition">
+          <%= image_tag "japanese.png", alt: "Harry" %>
+          <!-- テキスト -->
+          <div class="grid-content-text">
+            <h3><%= "ハリー教授のちくっと講座".truncate(13) %></h3>
+            <p><span><%= "パワーポイントを使った１分ミニミニプログラミング動画".truncate(32) %></span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 記事2 -->
+
+      <!-- 以下省略 -->
+
+  </section>
 </div>
+
