--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,25 @@
 
 <header style="z-index:1000;">
+ <script>
+    // ドロップダウンメニュー 
+    $(function(){
 
+      $("ul.sub").hide();
+
+      // マウスオーバー時
+      $("ul.menu li").hover(function(){
+        // this -> 「ul.menu li ul」
+        // not(:animated) -> アニメーション中のものに対しては処理しない
+        $("ul.sub:not(:animated)", this).slideDown();
+
+      // マウスリリース時
+      }, function(){
+        $("ul.sub",this).slideUp();
+      });
+
+    });
+  </script>
+  
   <!-- ヘッダー背景 -->
   <div class="nav-bg"></div>
 
@@ -12,14 +31,20 @@
   <!-- ヘッダーナビゲーション -->
   <div id="nav-header">
     <nav>
-      <ul>
+      <ul class="menu">
         <li><%= link_to "ホーム", root_path%></li>
         <li><%= link_to "ヘルプ", help_path%></li>
-        <li><%= link_to "国語", help_path%></li>
-        <li><%= link_to "社会", help_path %></li>
-        <li><%= link_to "数学", help_path %></li>
-        <li><%= link_to "理科", help_path %></li>
-        <li><%= link_to "英語", help_path %></li>
+        <li><%= link_to "教科"%>
+          <ul class="sub">
+            <li><%= link_to "国語", help_path%></li>
+            <li><%= link_to "社会", help_path %></li>
+            <li><%= link_to "数学", help_path %></li>
+            <li><%= link_to "理科", help_path %></li>
+            <li><%= link_to "英語", help_path %></li>
+          </ul>
+        </li>
+       
+        
              <% if logged_in? %>
         <li><%= link_to "Users", '#' %></li>
         <li><%= link_to "Profile", current_user %></li>
