Finish user-microposts scss

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
     <nav>
       <ul class="menu">
         <li><%= link_to "ホーム", root_path%></li>
-        <li><%= link_to "ヘルプ", help_path%></li>
+        <li><%= link_to "Subject", subject_path%></li>
         <li><%= link_to "教科"%>
           <ul class="sub">
             <li><%= link_to "国語", help_path%></li>
@@ -73,7 +73,7 @@
     <nav>
       <ul>
         <li><%= link_to "ホーム", root_path%></li>
-        <li><%= link_to "ヘルプ", help_path%></li>
+        <li><%= link_to "Subject", subject_path%></li>
         <li><%= link_to "国語", japanese_path%></li>
         <li><%= link_to "社会", socialstudies_path %></li>
         <li><%= link_to "数学", math_path %></li>
