--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,26 @@
-// Place all the styles related to the Articles controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "./custom.scss";
+/*================================================
+ *  Subjectのグリッドコンテンツ内のボタン
+ ================================================*/
+ .subject-article-btn {
+    width: 80%;
+    height: 40px;
+    margin: 0% 10%;
+    font-family: sans-serif;
+    font-size: calc(50% + 0.5vw);
+    font-weight: bold;
+    color: $base-color3;
+    letter-spacing: 2px;
+    border: 2px solid $base-color3;
+    border-radius: 32px;
+    background-color: white;
+    outline: none;
+    box-sizing: border-box;
+    transition: .4s;
+  
+    &:hover {
+      font-size: calc(50% + 0.4vw);
+      color: white;
+      background-color: $base-color3;
+    }
+  }
