--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,15 +1,11 @@
 <li id="article-<%= article.id %>">
-    <%= link_to gravatar_for(article.user, size: 50), article.user %>
-    <span class="user"><%= link_to article.user.name, article.user %></span>
-    <span class="body">
-    <%= article.body %>
-    <%= image_tag article.picture.url if article.picture? %>
-   </span>
-   <span class="timestamp">
-    Posted <%= time_ago_in_words(article.created_at) %> ago.
-    <% if current_user?(article.user) %>
-      <%= link_to "delete", article, method: :delete,
-                                       data: { confirm: "You sure?" } %>
-    <%end%>
-   </span>
+  <%= link_to gravatar_for(article.user, size: 50), article.user %>
+  <span class="user"><%= link_to article.user.name, article.user %></span>
+  <span class="article_name"><%= article.title %></span>
+  <span class="article_body"><%= article.body %></span>
+  <!-- 削除リンク -->
+  <% if current_user?(article.user) %>
+    <%= link_to "delete", article, method: :delete, data: { confirm: "You sure?" } %>
+  <% end %>
+
 </li>
