--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,4 +1,8 @@
 @import "./custom.scss";
+//自サイト用の専用配色
+$base-color1: #a3d749;
+$base-color2: #90ca3d;
+$base-color3: #fddb64;
 /*================================================
  *  Subjectのグリッドコンテンツ内のボタン
  ================================================*/
@@ -24,3 +28,100 @@
       background-color: $base-color3;
     }
   }
+
+  /*================================================
+ *  投稿記事のリスト
+ ================================================*/
+
+.articles {
+  width: 100%;
+  margin: 50px 0% 10px 0%;
+  padding: 0;
+  list-style: none;
+  border: 2px solid $base-color2;
+  font-size: calc(50% + 0.6vw);
+  font-family: sans-serif;
+  color: black;
+  background: $base-color2;
+
+  li {
+    margin: 50px 100px;
+    padding: 20px 30px;
+    font-size: calc(60% + 0.6vw);
+    border: 2px solid $base-color2;
+    overflow: hidden;
+    background-color: #fff;
+    border-radius: .8rem;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+  }
+
+  .article_title {
+    display: block;
+    margin: 0px 60px;
+    font-size: calc(100% + 0.6vw);
+  }
+
+  .article_body {
+    display: block;
+    margin: 10px 60px;
+    font-size: calc(45% + 0.6vw);
+    img {
+      display: block;
+      padding: 5px 0;
+    }
+  }
+
+  .article_subject {
+    display: block;
+    width: 80%;
+    margin: 0px 10%;
+    padding: 5px 8px;
+    font-size: calc(45% + 0.6vw);
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 1.5rem;
+    background-color: $base-color3;
+  }
+
+  .user {
+    display: block;
+    width: 80%;
+    margin: 10px 10% 3px 10%;
+    font-size: calc(45% + 0.6vw);
+    text-align: center;
+  }
+
+  .article_update, .article_delete {
+    width: 80%;
+    height: 32px;
+    margin: 0px 10% 20px 10%;
+    padding: 4px 8px;
+    font-family: sans-serif;
+    font-size: calc(50% + 0.5vw);
+    font-weight: bold;
+    color: $base-color3;
+    text-align: center;
+    letter-spacing: 2px;
+    border: 2px solid $base-color3;
+    border-radius: 16px;
+    background-color: white;
+    outline: none;
+    box-sizing: border-box;
+    transition: .4s;
+
+    a {
+      text-decoration: none;
+    }
+
+    &:hover {
+      font-size: calc(50% + 0.4vw);
+      color: white;
+      background-color: $base-color3;
+    }
+  }
+
+  .article_delete {
+    margin: 0px 10% 0px 10%;
+  }
+}
