--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,9 +32,8 @@
   <div id="nav-header">
     <nav>
       <ul class="menu">
-        <li><%= link_to "ホーム", root_path%></li>
+        <li><%= link_to "Home", root_path%></li>
         <li><%= link_to "Subject", subject_path%></li>
-        <li><%= link_to "教科"%>
         </li>
        
         
