--- a/app/views/static_pages/subject.html.erb
+++ b/app/views/static_pages/subject.html.erb
@@ -2,7 +2,7 @@
 
 <div id="contents">
 
-  <h1>教科ごとのネタ投稿ページ</h1>
+  <h1>教科ごとのページ一覧</h1>
 
   <!-- グリットレイアウト領域全体 -->
   <section class="non-background-area grid-block">
