--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -64,7 +64,7 @@ $base-color3: #fddb64;
   .article_body {
     display: block;
     margin: 10px 60px;
-    font-size: calc(45% + 0.6vw);
+    font-size: calc(40% + 0.6vw);
     img {
       display: block;
       padding: 5px 0;
@@ -98,7 +98,7 @@ $base-color3: #fddb64;
     margin: 0px 10% 20px 10%;
     padding: 4px 8px;
     font-family: sans-serif;
-    font-size: calc(50% + 0.5vw);
+    font-size: calc(30% + 0.5vw);
     font-weight: bold;
     color: $base-color3;
     text-align: center;
@@ -123,5 +123,232 @@ $base-color3: #fddb64;
 
   .article_delete {
     margin: 0px 10% 0px 10%;
+  }
+}
+
+/*================================================
+ *  ユーザープロフィール画面
+ ================================================*/
+
+ .profile-header {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  font-size: calc(120% + 0.7vw);
+  font-weight: bold;
+  color: black;
+  border: 2px solid $base-color2;
+  background: $base-color2;
+  li {
+    list-style: none;
+    margin: auto;
+  }
+}
+
+.my-btn {
+  width: auto;
+  height: 48px;
+  margin: 20px 50px;
+  padding: 8px 24px;
+  font-family: sans-serif;
+  font-size: calc(50% + 0.5vw);
+  font-weight: bold;
+  color: $base-color3;
+  text-align: center;
+  letter-spacing: 6px;
+  border: 2px solid $base-color3;
+  border-radius: 24px;
+  background-color: white;
+  outline: none;
+  box-sizing: border-box;
+  transition: .4s;
+
+  &:hover {
+    font-size: calc(50% + 0.4vw);
+    color: white;
+    background-color: $base-color3;
+  }
+}
+
+/*================================================
+ *  投稿記事の詳細ページ
+ ================================================*/
+
+ .article-detail {
+
+  width: auto;
+  margin: auto;
+  padding: 0px;
+  display: block;
+  border: 2px solid $base-color2;
+  color: black;
+  background: white;
+
+  // ボタンを配置するヘッダ領域
+  .detail_top {
+    padding: 10px 0;
+    display: flex;
+    justify-content: flex-start;
+    background-color: $base-color2;
+    .detail_btn {
+      width: 10%;
+    }
+  }
+
+  //タイトル
+  .detail_title {
+    padding: 30px 0;
+    display: flex;
+    justify-content: center;
+    font-size: calc(150% + 0.5vw);
+    font-weight: bold;
+    letter-spacing: 3px;
+    border-bottom: thin solid rgb(236, 236, 236);
+  }
+
+  .detail-main {
+    padding: 30px 0;
+    display: flex;
+    margin-left: 5rem;
+
+    // 教科タグ
+    .detail_subject {
+      width: 10rem;
+      margin: 1rem 0;
+      padding: 4px 6px;
+      font-size: calc(70% + 0.3vw);
+      color: #fff;
+      text-align: center;
+      border-radius: 1.6rem;
+      background-color: $base-color3;
+    }
+
+    // ボディ
+    .detail_body {
+      margin: 1rem 12rem 0 0;
+      height: 300px;
+      font-size: calc(100% + 0.3vw);
+      line-height: 28px;
+    }
+  }
+
+  // ボタン
+  .detail_btn {
+    width: 50%;
+    height: 32px;
+    margin: 10px 10%;
+    padding: 4px 8px;
+    font-family: sans-serif;
+    font-size: calc(50% + 0.5vw);
+    font-weight: bold;
+    text-decoration: none;
+    color: $base-color3;
+    text-align: center;
+    letter-spacing: 2px;
+    border: 2px solid $base-color3;
+    border-radius: 16px;
+    background-color: white;
+    outline: none;
+    box-sizing: border-box;
+    transition: .4s;
+
+    &:hover {
+      font-size: calc(50% + 0.4vw);
+      color: white;
+      background-color: $base-color3;
+    }
+  }
+}
+
+/*================================================
+ *  新規登録・更新フォーム
+ ================================================*/
+
+ // フォーム全体
+ .article-form {
+  position: relative;
+    width: 70%;
+  margin: -10% 15% 10px 15%;
+
+  // ラベル
+  label {
+    display: block;
+    margin-top:3rem;
+    margin-left:0.8rem;
+    font-size: calc(80% + 0.5vw);
+    color: black;
+  }
+
+  //インプットフィールド
+  input {
+    width: 100%;
+    height: 40px;
+    font-size: calc(50% + 0.6vw);
+    font-family: sans-serif;
+    font-weight: bold;
+    color: black;
+    letter-spacing: 2.5px;
+    margin: 4px 0;
+    padding-left: 20px;
+    border: 2px solid $base-color3;
+    border-radius: 8px;
+    outline: none;
+    box-sizing: border-box;
+  }
+
+  //テキストエリア
+  textarea {
+    width: 100%;
+    height: 80px;
+    font-size: calc(50% + 0.6vw);
+    font-family: sans-serif;
+    font-weight: bold;
+    color: black;
+    letter-spacing: 2.5px;
+    margin: 4px 0;
+    padding-left: 20px;
+    border: 2px solid $base-color3;
+    border-radius: 8px;
+    outline: none;
+    box-sizing: border-box;
+  }
+
+  input:focus {
+    border-color: #da3c41;
+  }
+
+  // ボタン
+  input[type=submit] {
+    width: 60%;
+    margin: 40px 20%;
+    font-size: calc(50% + 0.5vw);
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: $base-color3;
+    border: 2px solid $base-color3;
+    background-color: white;
+    transition: .4s;
+  }
+
+  input[type=submit]:hover {
+    font-size: calc(50% + 0.4vw);
+    color: white;
+    background-color: $base-color3;
+  }
+
+  select {
+    width: 15%;
+    height: 40px;
+    font-size: calc(50% + 0.6vw);
+    font-family: sans-serif;
+    font-weight: bold;
+    color: black;
+    letter-spacing: 2.5px;
+    margin: 4px 0;
+    padding-left: 20px;
+    border: 2px solid $base-color3;
+    border-radius: 16px;
+    outline: none;
+    box-sizing: border-box;
   }
 }
