--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,20 @@
 <% provide(:title, @user.name) %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
-    </section>
-     <!-- 投稿フォーム -->
-      <section class="article_form">
-        <%= render 'shared/article_form' %>
-      </section>
-  </aside>
+<div id="contents">
 
-   <div class="col-md-8">
-    <% if @user.article.any? %>
-      <h3>Articles (<%= @user.article.count %>)</h3>
-      <ol class="articles">
-        <%= render @articles %>
-      </ol>
+  <!-- 情報ヘッダー（投稿数、新規登録ボタン -->
+  <ul class="profile-header">
+    <li>投稿数：<%= @articles.count %>件</li>
+    <%= link_to "新規登録", new_article_path, class: "my-btn" %>
+  </div>
+
+  <!-- 自分が投稿した情報 -->
+  <div>
+    <h1>投稿情報</h1>
+    <ol class="articles">
+      <%= render @articles %>
+    </ol>
+    <div style="text-align: center;">
       <%= will_paginate @articles %>
-    <% end %>
+    </div>
   </div>
 </div>
