--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,18 +1,35 @@
 <li id="article-<%= article.id %>">
+
+  <div class="col-md-1">
+   <!-- いいねカウント -->
+    <div style="display: flex;">
+      <div class="index_good_icon"><%= image_tag "good2.png", size: '24x24' %></div>
+      <div class="index_good_count"><%= article.gooders.count %></div>
+    </div>
+  </div>
+
   <div class="col-md-2">
-    <div class="article_subject"><%= article.subject %></div>
+    <% if @search == "すべての投稿" %>
+      <div class="article_subject"><%= article.subject %></div>
+    <% end %>
     <span class="user"><%= link_to article.user.name, article.user %></span>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-7">
     <span class="article_title"><%= article.title %></span>
     <span class="article_body"><%= article.body %></span>
   </div>
 
   <div class="col-md-2">
-     <!-- 詳細情報ボタン -->
+    <!-- 詳細情報ボタン -->
     <div class="article_update">
       <%= link_to "詳細を見る", article %>
     </div>
+    <% if current_user?(article.user) %>
+      <div class="article_delete">
+        <%= link_to "削 除", article, method: :delete, data: { confirm: "You sure?" } %>
+      </div>
+    <% end %>
   </div>
+
 </li>
