--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,10 +4,18 @@
   <div class="detail_top">
     <!--戻るボタン（ユーザープロフィール画面へ戻る）-->
     <%= link_to "戻 る", redirect_before_url, class: "detail_btn" %>
-    <!--修正ボタン-->
-    <%= link_to "修 正", edit_article_path(@article), class: "detail_btn" %>
-    <!--削除ボタン-->
-    <%= link_to "削 除", @article , method: :delete, data: { confirm: "You sure?" }, class: "detail_btn" %>
+    <% if current_user?(@article.user) %>
+      <!--編集ボタン-->
+      <%= link_to "編 集", edit_article_path(@article), class: "detail_btn" %>
+      <!--削除ボタン-->
+      <%= link_to "削 除", @article, method: :delete, data: { confirm: "You sure?" }, class: "detail_btn" %>
+    <% else %>
+      <!-- いいねボタン -->
+      <div>
+        <%= render 'good_form' if logged_in? %>
+      </div>
+      <div id="good_count"><%= @article.gooders.count %></div>
+    <% end %>
   </div>
 
   <!-- タイトル -->
